[package]
name = "violet_server"
version = "0.1.0"
authors = ["rollrat <rollrat.cse@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2"
actix-rt = "1"
#diesel = { version = "1.4.4", features = ["mysql"] }
mysql = "18.2.0"
#simd-json = "0.3.9"
serde_json = "1.0.53"